daemon_final.log
   Compiling strata v0.1.0 (/Users/kovachevich/DEV/VALTER-25)
error[E0432]: unresolved import `serde_json`
 --> src/oracle.rs:2:5
  |
2 | use serde_json::{json, Value};
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `serde_json`
  |
  = help: if you wanted to use a crate named `serde_json`, use `cargo add serde_json` to add it to your `Cargo.toml`

warning: unused imports: `Context` and `SimpleObject`
 --> src/api.rs:1:21
  |
1 | use async_graphql::{Context, EmptyMutation, EmptySubscription, Object, Schema, SimpleObject};
  |                     ^^^^^^^                                                    ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `context_engine::ContextEngine`
  --> src/main.rs:10:5
   |
10 | use context_engine::ContextEngine;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `serde_json`
  --> src/main.rs:47:28
   |
47 |             let json_out = serde_json::to_string_pretty(&tools)?;
   |                            ^^^^^^^^^^ use of unresolved module or unlinked crate `serde_json`
   |
   = help: if you wanted to use a crate named `serde_json`, use `cargo add serde_json` to add it to your `Cargo.toml`

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
warning: `strata` (bin "strata") generated 2 warnings
error: could not compile `strata` (bin "strata") due to 2 previous errors; 2 warnings emitted
